# good-md

./: .gitignore  README.md  index.html  package-lock.json  package.json
landing/: Houston-2.0_0.1.0_aarch64.dmg  index.html  logo.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src/components/: CommandPalette.tsx  EmptyState.tsx  MarkdownRenderer.tsx  NativePdfPane.tsx  OutlinePane.tsx  PdfPane.tsx  ReaderPane.tsx  Sidebar.tsx  SidebarItem.tsx
src/hooks/: useFileManager.ts  useKeyboardShortcuts.ts  useThemePreference.ts
src/lib/: commands.ts  documents.ts  markdown.ts  pdf.ts  store.ts  types.ts
src/styles/: code-theme.css  markdown.css  sidebar.css  theme.css
