[package]
name = "houston"
version = "0.1.0"
description = "A clean markdown reader"
authors = []
edition = "2021"

[lib]
name = "houston_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
notify = { version = "8", features = ["macos_fsevent"] }
walkdir = "2"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
